song model and controller

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Artists#show</h1>
-<p>Find me in app/views/artists/show.html.erb</p>
+<h2><%= @artist.name.upcase %></h2>
+<br>
+
+<p>Song List:</p>
+
+
