--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,3 +1,4 @@
+<h2>ARTISTS</h2>
 <% @artists.each do |artist|%>
- <h2><%= artist.name %></h2>
+ <h4><%= link_to "#{artist.name}", artist_path(artist) %></h4>
 <% end %>
