--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,4 +1,7 @@
 <h2>ARTISTS</h2>
+<%= link_to "New Artist", new_artist_path %>
 <% @artists.each do |artist|%>
  <h4><%= link_to "#{artist.name}", artist_path(artist) %></h4>
+ <%= link_to "Edit", edit_artist_path(artist) %>
+ <%= link_to "Delete", artist_path(artist),method: :delete %>
 <% end %>
