--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,2 +1,3 @@
-<h1>Songs#show</h1>
-<p>Find me in app/views/songs/show.html.erb</p>
+<h3><%= @song.name %></h3>
+<%= render 'nav' %>
+<%= "Genre: #{@song.genre}" %>
