--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -1,9 +1,10 @@
 <h3>Billboard Chart - <%= @chart.name %></h3>
+<%= link_to 'Add Song', new_chart_song_path(@chart) %> 
+<hr>
 <% if @songs.any? %>
   <% @songs.each do |song| %>
     <p><%= song.name %></p>
-     <%= link_to 'Remove From Theater', remove_chart_song_path(@chart, song), method: :delete %>
+     <%= link_to 'Remove From Chart', remove_chart_song_path(@chart, song), method: :delete %>
   <% end %>
 <% end %>
 
-<%= link_to 'Add Song', new_chart_song_path(@chart) %> |
