--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,8 @@
 <h2>ARTISTS</h2>
-<%= link_to "New Artist", new_artist_path %>
+<hr>
+<%= link_to "New Artist ", new_artist_path %>
+<%= link_to "Back ", charts_path %>
+<hr>
 <% @artists.each do |artist|%>
  <h4><%= link_to "#{artist.name}", artist_path(artist) %></h4>
  <%= link_to "Edit", edit_artist_path(artist) %>
