--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -3,7 +3,7 @@
 <hr>
 <% if @songs.any? %>
   <% @songs.each do |song| %>
-    <p><%= song.name %></p>
+    <p><%= "#{song.name} by #{song.artist.name}" %></p>
      <%= link_to 'Remove From Chart', remove_chart_song_path(@chart, song), method: :delete %>
   <% end %>
 <% end %>
