--- a/app/views/charts/_nav.html.erb
+++ b/app/views/charts/_nav.html.erb
@@ -1,4 +1,8 @@
-<%= link_to "Artists", artists_path %>
+
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand"><%= link_to "Artists", artists_path %></a>
+</nav>
+
 
 
 
