--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,7 +1,12 @@
+<div class='title'>
 <h2>BILLBOARD CHARTS</h2>
-<hr>
+</div>
 <%= render 'nav' %>
-<hr>
+
 <% @charts.each do |chart|%>
- <h4><%= link_to "#{chart.name}", chart_path(chart) %></h4>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"> <%= link_to "#{chart.name}", chart_path(chart) %></h5>
+  </div>
+</div>
 <% end %>
