--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -1,10 +1,22 @@
 <h3>Billboard Chart - <%= @chart.name %></h3>
-<%= link_to 'Add Song', new_chart_song_path(@chart) %> 
-<hr>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand"><%= link_to 'Add Song', new_chart_song_path(@chart) %></a>
+  <a class="navbar-brand"><%= link_to "Back", root_path %></a>
+</nav>
+
+
+
 <% if @songs.any? %>
   <% @songs.each do |song| %>
-    <p><%= "#{song.name} by #{song.artist.name}" %></p>
-     <%= link_to 'Remove From Chart', remove_chart_song_path(@chart, song), method: :delete %>
+<div class="card" style="width: 18rem;">
+  <div class="card-body">
+    <h5 class="card-title"><%= link_to "#{song.name} by #{song.artist.name}", artist_song_path(song.artist, song) %></h5>
+     <a href="#" class="card-link"><%= link_to 'Remove From Chart', remove_chart_song_path(@chart, song), method: :delete %></a>
+  </div>
+</div>
+    
+     
+  
   <% end %>
 <% end %>
 
