--- a/app/views/songs/_nav.html.erb
+++ b/app/views/songs/_nav.html.erb
@@ -1,6 +1,7 @@
-<h3><%= @song.name %></h3>
-<hr>
-<%= link_to "Edit Song", edit_artist_song_path(@artist, @song) %>
-<%= link_to "Delete Song", artist_song_path(@artist, @song), method: :delete  %>
-<%= link_to "Back", artist_path(@artist, @song)%>
-<hr>
+<h3><%= @song.name.upcase %></h3>
+
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand"><%= link_to "Edit Song", edit_artist_song_path(@artist, @song) %></a>
+  <a class="navbar-brand"><%= link_to "Delete Song", artist_song_path(@artist, @song), method: :delete  %></a>
+  <a class="navbar-brand"><%= link_to "Back", artist_path(@artist, @song)%></a>
+</nav>
