--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,10 +1,15 @@
 <h2>ARTISTS</h2>
-<hr>
-<%= link_to "New Artist ", new_artist_path %>
-<%= link_to "Back ", charts_path %>
-<hr>
+<nav class="navbar navbar-dark bg-dark">
+  <a class="navbar-brand"><%= link_to "New Artist ", new_artist_path %></a>
+  <a class="navbar-brand"><%= link_to "Back ", charts_path %></a>
+</nav>
+
 <% @artists.each do |artist|%>
- <h4><%= link_to "#{artist.name}", artist_path(artist) %></h4>
- <%= link_to "Edit", edit_artist_path(artist) %>
- <%= link_to "Delete", artist_path(artist),method: :delete %>
+  <div class="card" style="width: 99%;">
+      <div class="card-body">
+        <h5 class="card-title"><%= link_to "#{artist.name}", artist_path(artist) %></h5>
+        <a href="#" class="card-link"><%= link_to "Edit", edit_artist_path(artist) %></a>
+        <a href="#" class="card-link"><%= link_to "Delete", artist_path(artist),method: :delete %></a>
+      </div>
+    </div> 
 <% end %>
