--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -4,7 +4,7 @@
 <%= render 'nav' %>
 
 <% @charts.each do |chart|%>
-<div class="card" style="width: 18rem;">
+<div class="card" style="width: 99%;">
   <div class="card-body">
     <h5 class="card-title"> <%= link_to "#{chart.name}", chart_path(chart) %></h5>
   </div>
