minor styling tweaks

--- a/app/views/charts/index.html.erb
+++ b/app/views/charts/index.html.erb
@@ -1,5 +1,5 @@
-<div class='title'>
-<h2>BILLBOARD CHARTS</h2>
+<div class='title_img'>
+<img src="/images/logo.jpg" height="100" width="185">
 </div>
 <%= render 'nav' %>
 
