--- a/app/views/charts/show.html.erb
+++ b/app/views/charts/show.html.erb
@@ -1,5 +1,5 @@
 <h3>Billboard Chart - <%= @chart.name %></h3>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand"><%= link_to 'Add Song', new_chart_song_path(@chart) %></a>
   <a class="navbar-brand"><%= link_to "Back", root_path %></a>
 </nav>
