--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,5 +1,5 @@
 <h2><%= @artist.name.upcase %></h2>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand"><%= link_to "New Song", new_artist_song_path(@artist) %></a>
   <a class="navbar-brand"><%= link_to "Back", root_path %></a>
 </nav>
