--- a/app/views/charts/_nav.html.erb
+++ b/app/views/charts/_nav.html.erb
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand"><%= link_to "Artists", artists_path %></a>
 </nav>
 
