added artist to add songs to chart

--- a/app/views/charts/new_song.html.erb
+++ b/app/views/charts/new_song.html.erb
@@ -1,7 +1,7 @@
 
 	<% @songs.each do |song| %>
 	  <li>
-	    <%= link_to song.name, add_chart_song_path(@chart, song), method: :post %>
+	    <%= link_to "#{song.name} by #{song.artist.name}", add_chart_song_path(@chart, song), method: :post %>
 	  </li>
 	  <hr />
 	<% end %>
