--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,5 +1,5 @@
 <h2>ARTISTS</h2>
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a class="navbar-brand"><%= link_to "New Artist ", new_artist_path %></a>
   <a class="navbar-brand"><%= link_to "Back ", charts_path %></a>
 </nav>
